# apps/api/src/main/java/io/github/trueruslan/zakupgotov/weeklyplanpantrycomparisonpreview/WeeklyPlanPantryComparisonOutcome.java
@@ -1,0 +1,6 @@
+package io.github.trueruslan.zakupgotov.weeklyplanpantrycomparisonpreview;
+
+public enum WeeklyPlanPantryComparisonOutcome {
+    COMPARED,
+    NO_REMAINING_DEMAND
+}
